--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,9 @@ test = false
 
 [dependencies]
 dtoa = "0.4.0"
+form_urlencoded = "1.0.0"
 itoa = "0.4.0"
 serde = "1.0.0"
-url = "2.0.0"
 
 [dev-dependencies]
 serde_derive = "1.0"
