--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,9 @@ travis-ci = {repository = "nox/serde_urlencoded"}
 test = false
 
 [dependencies]
-dtoa = "0.4.0"
 form_urlencoded = "1.0.0"
 itoa = "0.4.0"
+ryu = "1.0.0"
 serde = "1.0.0"
 
 [dev-dependencies]
