--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ description = "`x-www-form-urlencoded` meets Serde"
 categories = ["encoding", "web-programming"]
 keywords = ["serde", "serialization", "urlencoded"]
 exclude = ["/.travis.yml", "/bors.toml"]
+edition = "2018"
 
 [badges]
 travis-ci = {repository = "nox/serde_urlencoded"}
