--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "serde_urlencoded"
-version = "0.6.1"
+version = "0.7.0" # bump in documentation link and in README on update
 authors = ["Anthony Ramine <n.oxyde@gmail.com>"]
 license = "MIT/Apache-2.0"
 repository = "https://github.com/nox/serde_urlencoded"
-documentation = "https://docs.rs/serde_urlencoded"
+documentation = "https://docs.rs/serde_urlencoded/0.7.0/serde_urlencoded/"
 description = "`x-www-form-urlencoded` meets Serde"
 categories = ["encoding", "web-programming"]
 keywords = ["serde", "serialization", "urlencoded"]
@@ -18,10 +18,10 @@ travis-ci = {repository = "nox/serde_urlencoded"}
 test = false
 
 [dependencies]
-form_urlencoded = "1.0.0"
-itoa = "0.4.0"
-ryu = "1.0.0"
-serde = "1.0.0"
+form_urlencoded = "1"
+itoa = "0.4"
+ryu = "1"
+serde = "1"
 
 [dev-dependencies]
-serde_derive = "1.0"
+serde_derive = "1"
