Add support for serializing i128/u128 values
The crate currently fails serialization of 128 bit wide integers. That
is very unfortunate, because `SystemTime` values converted to
milliseconds, for example, are natively expressed as objects of such a
type.
`itoa` already supports such wide integer types, guarded by the i128
feature. With this change we introduce a similar feature and add support
for such a conversion.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ script:
        rustup component add rustfmt
        cargo fmt --all -- --check
      fi
-  - cargo build -v
-  - cargo test -v
+  - cargo build --features=i128 -v
+  - cargo test --features=i128 -v
