--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ travis-ci = {repository = "nox/serde_urlencoded"}
 [lib]
 test = false
 
+[features]
+default = []
+i128 = ["itoa/i128"]
+
 [dependencies]
 form_urlencoded = "1"
 itoa = "0.4"
