--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "serde_urlencoded"
-version = "0.7.1" # bump in documentation link and in README on update
+version = "0.7.1" # bump in README on update
 authors = ["Anthony Ramine <n.oxyde@gmail.com>"]
 license = "MIT/Apache-2.0"
 repository = "https://github.com/nox/serde_urlencoded"
-documentation = "https://docs.rs/serde_urlencoded/0.7.1/serde_urlencoded/"
+documentation = "https://docs.rs/serde_urlencoded/"
+readme = "README.md"
 description = "`x-www-form-urlencoded` meets Serde"
 categories = ["encoding", "web-programming"]
 keywords = ["serde", "serialization", "urlencoded"]
